--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,31 @@ body {
 
 p {
     display: none;
+    background: transparent;
+    background-color: none;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    font-style: italic;
+    margin-top: 8px;
 }
 
-input[type="number"] {
+button {
+    background: transparent;
+    border: none;
+    outline: none;
+}
+
+input {
     -moz-appearance: textfield;
-   font-size: 20px;
-   text-align: center;
-   background: transparent;
-   border: none;
-   border-bottom: 1px solid white;
-   padding: 2px 5px;
+    background: transparent;
+    color: white;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid white;
+    padding: 0 0 8px 0;
+    font-size: 22px;
+    text-align: center;
+    margin-top: 25px;
+    width: 50%;
 }
