--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,33 @@ input {
     margin-top: 25px;
     width: 50%;
 }
+
+input:invalid {
+    border: 2px solid red;
+    padding-bottom: 3px;
+    border-radius: 5px;
+    opacity: 0.5;
+}
+
+.location {
+    text-align: center;
+    font-size: 1.2rem;
+    color: white;
+    opacity: 0.6;
+    margin-top: 15px;
+}
+
+.weather-wrapper {
+    margin: auto;
+    text-align: center;
+    margin-top: 100px;
+}
+
+.temperature {
+    font-size: 5rem;
+    color: #e5e4e2;
+}
+
+.weather {
+    margin-top: 2em;
+}
