app layout traced

--- a/styles.css
+++ b/styles.css
@@ -82,5 +82,34 @@ input:invalid {
 }
 
 .weather {
-    margin-top: 2em;
+    margin-top: 1.5em;
+    color: #e5e4e2;
+    opacity: 0.8;
+}
+
+.weather-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    border: 1px solid white;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 0 5px;
+    margin: 100px 10px 0 10px;
+    height: 250px;
+    border-radius: 5px;
+    column-gap: 5px;
+    overflow-x: hidden;
+}
+
+.item {
+    display:flex;
+    flex-direction: column;
+    color: black;
+    background-color: #e5e4e2;
+    opacity: 0.7;
+    height: 100%;
+    width: 100px;
+    align-items: center;
+    justify-content: center;
 }
