fixed 'enter' key bug where form submitted without specifications fully satisfied

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .background {
-    background-image: url('images/lofi.jpg');
+    background-image: url('images/clouds.jpeg');
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -36,9 +36,10 @@ p {
 }
 
 button {
-    background: transparent;
-    border: none;
-    outline: none;
+    border: 3px solid red;
+    color: green;
+    width: 50px;
+    height: 50px;
 }
 
 input {
