deleted unecessary photos and re-adjusted css for temperature

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ input:invalid {
 #temperature {
     font-size: 5rem;
     color: #e5e4e2;
-    width: 100px;
+    width: 100%;
     margin: auto;
 }
 
