--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,25 @@
 
 body {
     height: 100%;
+    background-color: #C0C0C0;
 }
+
+
 
 #background {
     background-image: url('images/sunny.jpg');
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    width: 75%;
+    height: 75%;
     position: fixed;
     left: 0;
     right: 0;
     z-index: -1;
+    margin: auto;
+    margin-top: 100px;
+    position: fixed;
+    border-radius: 5px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
 
 #zip {
@@ -27,6 +35,7 @@ body {
 .zip-code-entry {
     text-align: center;
     opacity: 1.0;
+    margin-top: 15px;
 }
 
 p {
@@ -96,7 +105,7 @@ input:invalid {
 
 #weather {
     margin-top: 1.5em;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #e5e4e2;
 }
 
@@ -107,30 +116,111 @@ input:invalid {
 }
 
 .weather-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
+    display: flex;
+    flex-direction: column;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     margin: auto;
-    height: 250px;
+    height: 350px;
     margin-top: 55px;
     border-radius: 5px;
     overflow-x: hidden;
     width: 75%;
+    height: 100%;
     background-color: #c0b5ab;
     opacity: 0.8;
 }
 
 .item {
     display:flex;
-    flex-direction: column;
-    color: black;
-    background-color: #e5e4e2;
-    opacity: 0.7;
-    height: 100%;
-    width: 100px;
     align-items: center;
-    justify-content: center;
+    padding: 10px;
+    color: black;
+    opacity: 0.8;
+    height: 100%;
+    width: 100%;
+    font-size: 1.5rem;
 }
+
+/* .toggle {
+    position: fixed;
+    left: 50%;
+    bottom: 20px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+} */
+
+.flipswitch {
+    position: fixed;
+    left: 50%;
+    bottom: 20px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+  }
+  .flipswitch input[type=checkbox] {
+    display: none;
+  }
+  .flipswitch-label {
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+    border: 2px solid #999999;
+    border-radius: 50px;
+  }
+  .flipswitch-inner {
+    width: 200%;
+    margin-left: -100%;
+    -webkit-transition: margin 0.3s ease-in 0s;
+    -moz-transition: margin 0.3s ease-in 0s;
+    -ms-transition: margin 0.3s ease-in 0s;
+    -o-transition: margin 0.3s ease-in 0s;
+    transition: margin 0.3s ease-in 0s;
+  }
+  .flipswitch-inner:before, .flipswitch-inner:after {
+    float: left;
+    width: 50%;
+    height: 50px;
+    padding: 0;
+    line-height: 50px;
+    font-size: 18px;
+    color: white;
+    font-family: Trebuchet, Arial, sans-serif;
+    font-weight: bold;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  .flipswitch-inner:before {
+    content: "Fahrenheit";
+    padding-left: 12px;
+    background-color: #1fb743;
+    color: #FFFFFF;
+  }
+  .flipswitch-inner:after {
+    content: "Celsius";
+    padding-right: 12px;
+    background-color: #EBEBEB;
+    color: #888888;
+    text-align: right;
+  }
+  .flipswitch-switch {
+    width: 31px;
+    margin: 9.5px;
+    background: #FFFFFF;
+    border: 2px solid #999999;
+    border-radius: 50px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 105px;
+    -webkit-transition: all 0.3s ease-in 0s;
+    -moz-transition: all 0.3s ease-in 0s;
+    -ms-transition: all 0.3s ease-in 0s;
+    -o-transition: all 0.3s ease-in 0s;
+    transition: all 0.3s ease-in 0s;
+  }
+  .flipswitch-cb:checked + .flipswitch-label .flipswitch-inner {
+    margin-left: 0;
+  }
+  .flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
+    right: 0;
+  }
