--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ input:invalid {
 .weather-wrapper {
     margin: auto;
     text-align: center;
-    margin-top: 80px;
+    margin-top: 70px;
     width: 75%;
     padding: 10px;
     border-radius: 5px;
@@ -138,7 +138,7 @@ input:invalid {
     opacity: 0.8;
     height: 100%;
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 }
 
 /* .toggle {
@@ -148,6 +148,13 @@ input:invalid {
     transform: translate(-50%, -50%);
     margin: 0 auto;
 } */
+
+span {
+    margin-left: 10px;
+    font-style: italic;
+    font-size: 1.3rem;
+    white-space: nowrap;
+}
 
 .flipswitch {
     position: fixed;
