--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,26 @@ body {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
 
+.phone {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: white;
+    justify-content: flex-end;
+    gap: 8px;
+    height: 30px;
+    padding-right: 15px;
+    background-color: rgb(0, 0, 0);
+}
+
+.time {
+    font-size: 1.1rem;
+}
+
+.material-icons {
+    color: white;
+}
+
 #zip {
     opacity: 0.8;
 }
