--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -14,8 +14,8 @@ body {
 
 
 #background {
-    background-image: url('images/sunny.jpg');
-    background-size: cover;
+    background-image: url('images/background1.webp');
+    background-size:auto;
     width: 75%;
     height: 75%;
     position: fixed;
@@ -55,6 +55,7 @@ body {
 
 #zip {
     opacity: 0.8;
+    color: black;
 }
 
 .zip-code-entry {
@@ -121,6 +122,12 @@ input:invalid {
     opacity: 0.9;
 }
 
+#celsius {
+    font-size: 1.5rem;
+    color: #e5e4e2;
+    opacity: 0.9;
+}
+
 #icon {
   width: 25px;
   height: 25px;
@@ -171,7 +178,7 @@ input:invalid {
     opacity: 0.8;
     height: 100%;
     width: 100%;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 /* .toggle {
@@ -188,89 +195,3 @@ span {
     font-size: 1.3rem;
     white-space: nowrap;
 }
-
-.flipswitch {
-    position: fixed;
-    left: 50%;
-    bottom: -5px;
-    transform: translate(-50%, -50%);
-    margin: 0 auto;
-  }
-
-  .flipswitch input[type=checkbox] {
-    display: none;
-  }
-
-  .flipswitch-label {
-    display: block;
-    overflow: hidden;
-    cursor: pointer;
-    border: 2px solid #999999;
-    border-radius: 50px;
-  }
-
-  .flipswitch-inner {
-    width: 200%;
-    margin-left: -100%;
-    -webkit-transition: margin 0.3s ease-in 0s;
-    -moz-transition: margin 0.3s ease-in 0s;
-    -ms-transition: margin 0.3s ease-in 0s;
-    -o-transition: margin 0.3s ease-in 0s;
-    transition: margin 0.3s ease-in 0s;
-  }
-
-  .flipswitch-inner:before, .flipswitch-inner:after {
-    float: left;
-    width: 50%;
-    height: 50px;
-    padding: 0;
-    line-height: 50px;
-    font-size: 18px;
-    color: white;
-    font-family: Trebuchet, Arial, sans-serif;
-    font-weight: bold;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-
-  .flipswitch-inner:before {
-    content: "Fahrenheit";
-    padding-left: 12px;
-    background-color: #1fb743;
-    color: #FFFFFF;
-  }
-
-  .flipswitch-inner:after {
-    content: "Celsius";
-    padding-right: 12px;
-    background-color: #EBEBEB;
-    color: #888888;
-    text-align: right;
-  }
-
-  .flipswitch-switch {
-    width: 31px;
-    margin: 9.5px;
-    background: #FFFFFF;
-    border: 2px solid #999999;
-    border-radius: 50px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 105px;
-    -webkit-transition: all 0.3s ease-in 0s;
-    -moz-transition: all 0.3s ease-in 0s;
-    -ms-transition: all 0.3s ease-in 0s;
-    -o-transition: all 0.3s ease-in 0s;
-    transition: all 0.3s ease-in 0s;
-  }
-
-  .flipswitch-cb:checked + .flipswitch-label .flipswitch-inner {
-    margin-left: 0;
-  }
-
-  .flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
-    right: 0;
-  }
-
