--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     background-image: url('images/background1.webp');
     background-size:auto;
     width: 75%;
-    height: 75%;
+    height: 80%;
     position: fixed;
     left: 0;
     right: 0;
@@ -106,7 +106,7 @@ input:invalid {
 .weather-wrapper {
     margin: auto;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 30px;
     width: 75%;
     padding: 10px;
     border-radius: 5px;
@@ -115,10 +115,9 @@ input:invalid {
 }
 
 #temperature {
-    font-size: 4rem;
+    font-size: 3.5rem;
     color: #e5e4e2;
     width: 100%;
-    margin: auto;
     opacity: 0.9;
 }
 
@@ -168,6 +167,7 @@ input:invalid {
     height: 100%;
     background-color: #c0b5ab;
     opacity: 0.8;
+    margin-bottom: 20px;
 }
 
 .item {
@@ -194,4 +194,10 @@ span {
     font-style: italic;
     font-size: 1.3rem;
     white-space: nowrap;
+}
+
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
