--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,7 @@ input:invalid {
     height: 100%;
     width: 100%;
     font-size: 1.2rem;
+    justify-content: center;
 }
 
 /* .toggle {
@@ -200,4 +201,29 @@ span {
     display: flex;
     flex-direction: column;
     height: 100%;
+}
+
+.content-wrapper {
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 8px solid black;
+    border-radius: 8px;
+}
+
+@media screen and (min-width: 728px) {
+    .item {
+        font-size: 1.4rem;
+    }
+
+    .content-wrapper,
+    .background {
+        width: 400px;
+        margin: auto;
+        border: 8px solid black;
+        background-color: rgba(255, 255, 255, 0.5);
+        border-radius: 8px;
+    }
+
+    input {
+        border-bottom: solid black;
+    }
 }
